Fixed alignment issues and other small fixes

--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@ body, html {
 .container-fluid {
 	height: 100%;
 	width: 80%;
-	padding-top: 60px;
+	padding-top: 80px;
 }
 
 
@@ -169,16 +169,12 @@ border-radius: 0;
 	color: white;
 }
 
-#footerlinks {
-	list-style-type: none;
-}
-
 #footerlinks2 {
 	text-align: center;
 	list-style-type: none;
 }
 
-#footerlinks li a{
+#footerlinks a{
 	text-align: center;
 	color: white;
 	font-family: 'Kalam', cursive;
@@ -350,7 +346,7 @@ p {
 	    padding-top: 60px;
 	}
 	
-	.footerlinks {
+	#footerlinks {
 		margin-top: 15px;
 	}
 	
